# http-error

./: .gitignore  Cargo.toml
src/: any_http_error.rs  error.rs  lib.rs  option_ext.rs  reason.rs  result_ext.rs
