[package]
name = "http-error"
version = "0.3.0-alpha.2"
edition = "2021"
authors = ["Markus Ast <m@rkusa.st>"]
license = "MIT OR Apache-2.0"
description = "Error trait to help convert errors to http error responses"
repository = "https://github.com/rkusa/http-error"

[dependencies]
http = "1.0"
tracing = { version = "0.1", optional = true }

[features]
default = []
